crates/inertia-macros/tests/ui/fail/reserved_errors_prop.rs
use inertia_macros::InertiaPage;

#[derive(InertiaPage)]
#[inertia(component = "Errors")]
struct Reserved { errors: String }

fn main() {}
